# IVAO-Joystick-PTT

./: CHANGELOG.md  Cargo.toml  README.md  skunkcrafts_updater.cfg
.github/workflows/: release.yml
release/: lin.xpl  mac.xpl  skunkcrafts_updater.cfg  skunkcrafts_updater_whitelist.txt  win.xpl
src/: config.rs  input.rs  lib.rs
