[package]
name = "ivao_joystick_ptt"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Jeremie Corbier <jeremie.corbier@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
xplm = "0.4"
xplm-sys = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
enigo = "0.6.1" 

[profile.release]
strip = "debuginfo"
lto = true
